# Locomotion-in-Human-Space

./: .gitignore  README.md  approach_to_bottle_safe.py  read.md
experiments/: eval_snippets.tex  metrics_summary.csv  table_hardware.tex
experiments/quick_test/: metrics.csv  timeseries.csv
src/go2_d1_control/: package.xml  setup.cfg  setup.py
src/go2_d1_control/config/: impedance.yaml
src/go2_d1_control/go2_d1_control/: approach_controller.py  approach_to_bottle.py  bottle_human_detector.py  cmdvel_to_unitree_req.py  handover_coordinator.py  pose_monitor.py  pose_tf_relay.py  unitree_cmdvel_bridge.py  wbc_balance.py
src/go2_d1_control/go2_d1_control/config/: ros2_controllers.yaml
src/go2_d1_control/launch/: arm_touch.launch.py  bottle_reach.launch.py  handover_demo.launch.py  handover_real.launch.py
src/go2_d1_control/resource/: go2_d1_control
src/go2_d1_control/results/: csr_csr_on_20250929_143134.csv  csr_csr_on_20250929_143134.meta.txt
src/go2_d1_control/tools/: csr_analyze.py  csr_hud.py  csr_recorder.py
src/go2_d1_description/: CMakeLists.txt  package.xml
src/go2_d1_description/launch/: view_rviz.launch.py
src/go2_d1_description/rviz/: handover_demo.rviz
src/go2_d1_description/urdf/: go2_d1.urdf  go2_d1_gazebo.urdf
src/go2_d1_eval/: package.xml  setup.cfg  setup.py
src/go2_d1_eval/go2_d1_eval/: csr_logger.py
src/go2_d1_eval/launch/: csr_eval.launch.py
src/go2_d1_eval/resource/: go2_d1_eval
src/go2_d1_eval/scripts/: plot_trajectories.py  run_trial.sh  summarize_metrics.py
src/go2_d1_perception/: package.xml  setup.cfg  setup.py
src/go2_d1_perception/config/: perception.yaml
src/go2_d1_perception/go2_d1_perception/: bottle_human_detector.py  perception_viz.py
src/go2_d1_perception/resource/: go2_d1_perception
src/go2_d1_tools/: package.xml  setup.cfg  setup.py
src/go2_d1_tools/go2_d1_tools/: approach_to_bottle.py  cmdvel_to_unitree_req.py
src/go2_d1_tools/resource/: go2_d1_tools
src/go2_d1_wbc_eval/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/go2_d1_wbc_eval/go2_d1_wbc_eval/: plot_wbc.py  wbc_eval_logger.py  wbc_logger.py  wbc_router.py
src/go2_d1_wbc_eval/go2_d1_wbc_eval/launch/: wbc_eval.launch.py
src/go2_d1_wbc_eval/launch/: wbc_eval.launch.py
src/go2_d1_wbc_eval/resource/: go2_d1_wbc_eval
wbc_data/20250930_213158_raw/: metrics.csv  timeseries.csv
wbc_data/20250930_213555_pocs/: metrics.csv  timeseries.csv
wbc_data/20250930_213655_osqp/: metrics.csv  timeseries.csv
