[develop]
script_dir=$base/lib/go2_d1_control
[install]
install_scripts=$base/lib/go2_d1_control
[options.entry_points]
console_scripts =
    arm_direct_test = go2_d1_control.arm_direct_test:main
    wbc_to_unitree_arm = go2_d1_control.wbc_to_unitree_arm:main
    arm_impedance_node = go2_d1_control.arm_impedance_node:main
    gripper_pose_publisher = go2_d1_control.gripper_pose_publisher:main
    pose_tf_relay = go2_d1_control.pose_tf_relay:main
    bottle_human_detector = go2_d1_control.bottle_human_detector:main
    approach_controller = go2_d1_control.approach_controller:main
    handover_coordinator = go2_d1_control.handover_coordinator:main
    arm_bottle_reacher = go2_d1_control.arm_bottle_reacher:main

