<?xml version="1.0"?>
<package format="3">
  <name>go2_d1_perception</name>
  <version>0.0.1</version>
  <description>Perception nodes for Unitree GO2 (bottle/person detector)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
